# easywallbox

./: .gitignore  blemap.py  commands.py  easywallbox.py  flake.nix  pyproject.toml  repeating_timer.py  scan.py  settings.py  terminal.py
nix/: paho.nix  pyobjc-framework-corebluetooth.nix  pyobjc-framework-libdispatch.nix
